update geprice